refactor: SonarCloud 이슈 수정 (Stream.toList(), 주석 코드 제거)